--- a/week_8/problem_set_8/public/templates/contact.html
+++ b/week_8/problem_set_8/public/templates/contact.html
@@ -4,7 +4,7 @@
         űrlapot.</p>
 </div>
 <div class="modal-dialog" style="pointer-events: auto;">
-    <form action="" method="POST">
+    <form action="" method="POST" id="contact-form">
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="last_name">Vezetéknév</label>
