--- a/week_8/problem_set_8/public/templates/home.html
+++ b/week_8/problem_set_8/public/templates/home.html
@@ -1,4 +1,4 @@
-<div class="container px-3 py-3 pt-md-4 pb-md-4 mx-auto">
+<div class="container px-3 py-3 pt-md-4 pb-md-4 mx-auto" id="navbarSupportedContent">
   <h1 class="display-4 fw-normal pb-4 text-center">Ismertető</h1>
   <p class="text-justify">
     Üdvözöllek a Bibó István Szakkollégium Politikatudományi Műhelyének tagjai
@@ -17,11 +17,11 @@
   <p class="text-justify">
     Amennyiben az oldal működésével kapcsolatban hibát fedeznél fel, vagy
     szeretnél visszajelzést küldeni, kérlek kattints a
-    <a href="{% url 'contact' %}">Kapcsolat</a> menüpontra.
+    <a href="/contact">Kapcsolat</a> menüpontra.
   </p>
   <h4 class="fw-bold pb-1 pt-4">Disclaimer</h4>
   <p class="text-justify">
-    A kalkulátor a <a href="{% url 'pmtsz' %}">Szabályzat</a> menüpont alatt
+    A kalkulátor a <a href="/pmtsz">Szabályzat</a> menüpont alatt
     elérhető dokumentum alapján készült, a kalkulátor pedig a
     <a
       target="_blank"
