--- a/week_8/problem_set_8/public/templates/contact.html
+++ b/week_8/problem_set_8/public/templates/contact.html
@@ -23,6 +23,6 @@
             <label for="message">Üzenet</label>
             <textarea class="form-control" id="message" name="message" rows="4"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Küldés</button>
+        <button type="button" class="btn btn-primary" id="contact-submit">Küldés</button>
     </form>
 </div>
