--- a/week_8/problem_set_8/public/templates/home.html
+++ b/week_8/problem_set_8/public/templates/home.html
@@ -25,6 +25,7 @@
     elérhető dokumentum alapján készült, a kalkulátor pedig a
     <a
       target="_blank"
+      rel="noopener noreferrer"
       href="https://app.diagrams.net/#G1kBm0kg2u4H8dbYJrcFVvw6TEr1YlbqmR"
       >linken</a
     >
