--- a/week_8/problem_set_8/public/templates/404.html
+++ b/week_8/problem_set_8/public/templates/404.html
@@ -1,5 +1,7 @@
-<div class="container">
-  <h1>404</h1>
-  <p>Oops! Page not found.</p>
-  <p><a href="/">Go to Home Page</a></p>
-</div>
+<div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <div class="container">
+    <h1 class="display-4 fw-normal pb-4">404</h1>
+    <p>Oops! Nem található az oldal.</p>
+    <p><a href="/" class="btn btn-primary">Kezdőlap</a></p>
+  </div>
+</div>>
