--- a/week_8/problem_set_8/public/templates/contact-success.html
+++ b/week_8/problem_set_8/public/templates/contact-success.html
@@ -3,7 +3,7 @@
     <p class="lead">Megkaptuk az üzeneted, amennyiben megadtad az e-mail címed hamarosan visszajelzünk!</p>
     <hr>
     <p class="lead">
-        <a class="btn btn-primary btn-lg" href="/home" role="button">Kezdőlap</a>
-        <a class="btn btn-secondary btn-lg" href="/home" role="button" id="new-contact-form">Új üzenet</a>
+        <a class="btn btn-primary btn-lg" href="/" role="button">Kezdőlap</a>
+        <a class="btn btn-secondary btn-lg" href="/contact" role="button" id="new-contact-form">Új üzenet</a>
     </p>
 </div>
